--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h1 id="logo">CONHECE-TE</h1>
         <!-- GAMBIARRA -->
         <div class="azul">
-        <a href="../conheceteazul/página boneco/index.html">
+        <a href="conhecete1201/conheceteazul/página boneco/index.html">
     </div>
 </a>
         <div class="vermelho">
-        <a href="../conhecetevermelho/paginaOrgao/orgaos.html">
+        <a href="conhecete1201/conhecetevermelho/paginaOrgao/orgaos.html">
     </div>
 </a>
         <!-- FIM DA GAMBIARRA -->
